--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -297,6 +297,196 @@
    "source": [
     "print(s1.index)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c823319",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.values) #use for the checking values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52062ad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.dtype) # use bfor checking datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0debe803",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.size) #using for the size "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81db688c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.shape)#shape is in the form of tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "0a37b3ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks_series=pd.Series([90,50,85,93,35])\n",
+    "print(marks_series.is_unique)\n",
+    "duplicate_series=pd.Series([90,5,6,7,89])\n",
+    "print(duplicate_series.is_unique)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "960cf6ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       1\n",
+      "1       2\n",
+      "2       3\n",
+      "3    none\n",
+      "4     5.5\n",
+      "dtype: object\n",
+      "0    False\n",
+      "1    False\n",
+      "2    False\n",
+      "3    False\n",
+      "4    False\n",
+      "dtype: bool\n",
+      "0    True\n",
+      "1    True\n",
+      "2    True\n",
+      "3    True\n",
+      "4    True\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "s_with_nan=pd.Series([1,2,3,\"none\",5.5])\n",
+    "print(s_with_nan)\n",
+    "print(s_with_nan.isnull())\n",
+    "print(s_with_nan.notnull())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b94d92ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    10\n",
+      "b    20\n",
+      "c    30\n",
+      "d    40\n",
+      "e    50\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=pd.Series([10,20,30,40,50],index=['a','b','c','d','e'])\n",
+    "print(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b44d66a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n",
+      "a    10\n",
+      "b    20\n",
+      "e    50\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hp\\AppData\\Local\\Temp\\ipykernel_15020\\3802549766.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(data[2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(data['c'])\n",
+    "print(data[2])\n",
+    "print(data[['a','b','e']])"
+   ]
   }
  ],
  "metadata": {
