--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "id": "b44d66a1",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Hp\\AppData\\Local\\Temp\\ipykernel_15020\\3802549766.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Hp\\AppData\\Local\\Temp\\ipykernel_15020\\3888215100.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  print(data[2])\n"
      ]
     }
@@ -485,8 +485,56 @@
     "\n",
     "print(data['c'])\n",
     "print(data[2])\n",
-    "print(data[['a','b','e']])"
+    "print(data[['a','b','e']])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68da68ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "8aa42bb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b    20\n",
+      "d    40\n",
+      "dtype: int64\n",
+      "b    20\n",
+      "c    30\n",
+      "d    40\n",
+      "dtype: int64\n",
+      "e    50\n",
+      "d    40\n",
+      "c    30\n",
+      "b    20\n",
+      "a    10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['b':'d':2])\n",
+    "print(data[1:4])\n",
+    "print(data[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fc2be00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
